--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="card-body">
               <h5 class="card-title">Responsive Portfolio</h5>
               <p class="card-text">A modern personal portfolio built with HTML, CSS, and Bootstrap.</p>
-              <a href="" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="https://rahmoney2.github.io/portfolio/" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
