--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
     .project-card.show {
       opacity: 3;
-      transform: translateY(0);
+      transform: translateY(20px);
     }
     .project-card img {
       height: 200px;
@@ -185,11 +185,11 @@
         <!-- Project 2 -->
         <div class="col-md-4 project-card">
           <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 2">
+            <img src="" class="card-img-top" alt="Project 2">
             <div class="card-body">
               <h5 class="card-title">JavaScript Weather App</h5>
               <p class="card-text">An app that fetches weather data from an API and displays it dynamically.</p>
-              <a href="#" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="https://" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
@@ -211,7 +211,7 @@
             <div class="card-body">
               <h5 class="card-title">To-Do List App</h5>
               <p class="card-text">A simple and interactive to-do list app using JavaScript.</p>
-              <a href="#" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="./To-Do List/Index2.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@
             <div class="card-body">
               <h5 class="card-title">Blog Website</h5>
               <p class="card-text">A blog website with a clean design and responsive layout.</p>
-              <a href="https://rahmoney2.github.io/B-Jolat/blog.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="https://rahmoney2.github.io/B-Jolat/index.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
