--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
         <!-- Project 2 -->
         <div class="col-md-4 project-card">
           <div class="card">
-            <img src="" class="card-img-top" alt="Project 2">
+            <img src="weather.png" class="card-img-top" alt="Project 2">
             <div class="card-body">
               <h5 class="card-title">JavaScript Weather App</h5>
               <p class="card-text">An app that fetches weather data from an API and displays it dynamically.</p>
-              <a href="https://" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="index1.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
@@ -207,11 +207,11 @@
         <!-- Project 4 -->
         <div class="col-md-4 project-card">
           <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 4">
+            <img src="./Todo list (1).png" class="card-img-top" alt="Project 4">
             <div class="card-body">
               <h5 class="card-title">To-Do List App</h5>
               <p class="card-text">A simple and interactive to-do list app using JavaScript.</p>
-              <a href="./To-Do List/Index2.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="Index2.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
@@ -229,11 +229,11 @@
         <!-- Project 6 -->
         <div class="col-md-4 project-card">
           <div class="card">
-            <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 6">
+            <img src="./Quiz.png" class="card-img-top" alt="Project 6">
             <div class="card-body">
               <h5 class="card-title">Interactive Quiz</h5>
               <p class="card-text">A JavaScript-powered quiz game with score tracking.</p>
-              <a href="#" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="Quiz.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
