--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero text-center">
     <div class="container">
-      <img src="./web image.jpg" alt="Profile Picture">
+      <img src="#" alt="Profile Picture">
       <h1 class="mt-4">Hi, I'm Abdulrahmon</h1>
       <p class="lead">Frontend Developer | HTML, CSS, Bootstrap & JavaScript</p>
       <div class="social-icons mt-4">
@@ -200,7 +200,7 @@
             <div class="card-body">
               <h5 class="card-title">E-commerce Landing Page</h5>
               <p class="card-text">A clean and responsive landing page for an online store.</p>
-              <a href="#" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
+              <a href="e-commerece.html" class="btn btn-dark"><i class="fas fa-link"></i> View Project</a>
             </div>
           </div>
         </div>
