--- a/index.html
+++ b/index.html
@@ -248,21 +248,21 @@
         <div class="col-md-8 col-lg-6">
           <div class="contact-form">
             <h3 class="text-center mb-4">Get in Touch</h3>
-            <form id="contactForm">
+            <form action="https://formspree.io/f/mgvzjebg" method="POST" id="contactFogrm">
               <div class="mb-3">
                 <label class="form-label">Name</label>
-                <input type="text" id="name" class="form-control" placeholder="Your Name">
+                <input type="text" name="name" id="namee" class="form-control" placeholder="Your Name">
               </div>
               <div class="mb-3">
                 <label class="form-label">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="Your Email">
+                <input type="email" id="emaill" class="form-control" placeholder="Your Email">
               </div>
               <div class="mb-3">
                 <label class="form-label">Message</label>
-                <textarea id="message" class="form-control" rows="4" placeholder="Your Message"></textarea>
+                <textarea type="message" id="messagee" class="form-control" rows="4" placeholder="Your Message"></textarea>
               </div>
               <button type="submit" class="btn btn-dark w-100">Send Message</button>
-              <p id="formMessage" class="mt-3 text-center"></p>
+              <p id="formMegssage" class="mt-3 text-center"></p>
             </form>
           </div>
         </div>
@@ -296,6 +296,15 @@
         formMessage.style.color = 'red';
         return;
       }
+      
+      const formData = new FormData(form);
+    
+      try {
+        const response = await fetch("https://formspree.io/f/mgvzjebg", {
+          method: "POST",
+          body: formData,
+          headers: { "Accept": "application/json" }
+        });
 
       if (!/^[^@\s]+@[^@\s]+\.[^@\s]+$/.test(email)) {
         formMessage.textContent = 'Please enter a valid email.';
@@ -309,21 +318,22 @@
       // Reset form
       document.getElementById('contactForm').reset();
     });
-     // Slide-up animation on scroll
-    const cards = document.querySelectorAll('.project-card');
 
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('show');
-          observer.unobserve(entry.target);
-        }
-      });
-    }, { threshold: 0.5 });
+    //  // Slide-up animation on scroll
+    // const cards = document.querySelectorAll('.project-card');
 
-    cards.forEach(card => {
-      observer.observe(card);
-    });
+    // const observer = new IntersectionObserver(entries => {
+    //   entries.forEach(entry => {
+    //     if (entry.isIntersecting) {
+    //       entry.target.classList.add('show');
+    //       observer.unobserve(entry.target);
+    //     }
+    //   });
+    // }, { threshold: 0.5 });
+
+    // cards.forEach(card => {
+    //   observer.observe(card);
+    // });
   </script>
 </body>
 </html>
